Prevented odd centering of elements on mobile

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1095,6 +1095,10 @@ aside.creation nav a span {
 		margin: auto;
     	position: absolute;
     }
+    section.content {
+         text-align: left;
+        width: 100%;
+     }
 	.launcher .app.icon {
 		width: 56px;
 		height: 64px;
